--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "html2canvas": "^1.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
@@ -25,7 +27,9 @@
     "eslint-plugin-sonarjs": "^0.13.0",
     "postcss": "^8.4.13",
     "stylelint-config-recommended": "^7.0.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.24",
+    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
   }
